maze.lessons.maze.island.IslandMaze.scala.error
Escaper:8: error: ';' expected but 'else' found.
    }else{
     ^Escaper:16: error: Unmatched closing brace '}' ignored here
}
^